--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
     <h1>meme8</h1>
     <a href="/"><button>Log Out</button></a>
     <a href="/user/<%= id %>"><button>Profile</button></a>
+    <a href="/post/add/<%= id %>"><button>Add Post</button></a>
     <table border="1">
         <tr>
           <th>No.</th>
